// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <_default
    currentIndex={1}
    entries={
      Array [
        Object {
          "body": "this body",
          "title": "this title",
        },
      ]
    }
    entryIsSelected={true}
    handleAdd={[MockFunction]}
    history={
      Object {
        "push": [MockFunction],
      }
    }
    showAdd={true}
    updateMode={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <button
          className="settings drop-container"
          onClick={[Function]}
          title="Settings"
          type="button"
        >
          <svg
            className="icon"
          >
            <use
              xlinkHref="icons.svg#icon-settings"
            />
          </svg>
        </button>,
        <button
          className="add active"
          onClick={[MockFunction]}
          title="New entry"
          type="button"
        >
          <svg
            className="icon"
          >
            <use
              xlinkHref="icons.svg#icon-plus"
            />
          </svg>
        </button>,
        <button
          className="edit"
          title="Edit Entry"
          type="button"
        >
          <svg
            className="icon"
          >
            <use
              xlinkHref="icons.svg#icon-edit-3"
            />
          </svg>
        </button>,
        <button
          className="delete"
          title="Delete Entry"
          type="button"
        >
          <svg
            className="icon"
          >
            <use
              xlinkHref="icons.svg#icon-trash-2"
            />
          </svg>
        </button>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <svg
            className="icon"
          >
            <use
              xlinkHref="icons.svg#icon-settings"
            />
          </svg>,
          "className": "settings drop-container",
          "onClick": [Function],
          "title": "Settings",
          "type": "button",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <use
              xlinkHref="icons.svg#icon-settings"
            />,
            "className": "icon",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "xlinkHref": "icons.svg#icon-settings",
            },
            "ref": null,
            "rendered": null,
            "type": "use",
          },
          "type": "svg",
        },
        "type": "button",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <svg
            className="icon"
          >
            <use
              xlinkHref="icons.svg#icon-plus"
            />
          </svg>,
          "className": "add active",
          "onClick": [MockFunction],
          "title": "New entry",
          "type": "button",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <use
              xlinkHref="icons.svg#icon-plus"
            />,
            "className": "icon",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "xlinkHref": "icons.svg#icon-plus",
            },
            "ref": null,
            "rendered": null,
            "type": "use",
          },
          "type": "svg",
        },
        "type": "button",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <svg
            className="icon"
          >
            <use
              xlinkHref="icons.svg#icon-edit-3"
            />
          </svg>,
          "className": "edit",
          "onClick": undefined,
          "title": "Edit Entry",
          "type": "button",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <use
              xlinkHref="icons.svg#icon-edit-3"
            />,
            "className": "icon",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "xlinkHref": "icons.svg#icon-edit-3",
            },
            "ref": null,
            "rendered": null,
            "type": "use",
          },
          "type": "svg",
        },
        "type": "button",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <svg
            className="icon"
          >
            <use
              xlinkHref="icons.svg#icon-trash-2"
            />
          </svg>,
          "className": "delete",
          "onClick": undefined,
          "title": "Delete Entry",
          "type": "button",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <use
              xlinkHref="icons.svg#icon-trash-2"
            />,
            "className": "icon",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "xlinkHref": "icons.svg#icon-trash-2",
            },
            "ref": null,
            "rendered": null,
            "type": "use",
          },
          "type": "svg",
        },
        "type": "button",
      },
    ],
    "type": "footer",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <button
            className="settings drop-container"
            onClick={[Function]}
            title="Settings"
            type="button"
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="icons.svg#icon-settings"
              />
            </svg>
          </button>,
          <button
            className="add active"
            onClick={[MockFunction]}
            title="New entry"
            type="button"
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="icons.svg#icon-plus"
              />
            </svg>
          </button>,
          <button
            className="edit"
            title="Edit Entry"
            type="button"
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="icons.svg#icon-edit-3"
              />
            </svg>
          </button>,
          <button
            className="delete"
            title="Delete Entry"
            type="button"
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="icons.svg#icon-trash-2"
              />
            </svg>
          </button>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <svg
              className="icon"
            >
              <use
                xlinkHref="icons.svg#icon-settings"
              />
            </svg>,
            "className": "settings drop-container",
            "onClick": [Function],
            "title": "Settings",
            "type": "button",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <use
                xlinkHref="icons.svg#icon-settings"
              />,
              "className": "icon",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "xlinkHref": "icons.svg#icon-settings",
              },
              "ref": null,
              "rendered": null,
              "type": "use",
            },
            "type": "svg",
          },
          "type": "button",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <svg
              className="icon"
            >
              <use
                xlinkHref="icons.svg#icon-plus"
              />
            </svg>,
            "className": "add active",
            "onClick": [MockFunction],
            "title": "New entry",
            "type": "button",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <use
                xlinkHref="icons.svg#icon-plus"
              />,
              "className": "icon",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "xlinkHref": "icons.svg#icon-plus",
              },
              "ref": null,
              "rendered": null,
              "type": "use",
            },
            "type": "svg",
          },
          "type": "button",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <svg
              className="icon"
            >
              <use
                xlinkHref="icons.svg#icon-edit-3"
              />
            </svg>,
            "className": "edit",
            "onClick": undefined,
            "title": "Edit Entry",
            "type": "button",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <use
                xlinkHref="icons.svg#icon-edit-3"
              />,
              "className": "icon",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "xlinkHref": "icons.svg#icon-edit-3",
              },
              "ref": null,
              "rendered": null,
              "type": "use",
            },
            "type": "svg",
          },
          "type": "button",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <svg
              className="icon"
            >
              <use
                xlinkHref="icons.svg#icon-trash-2"
              />
            </svg>,
            "className": "delete",
            "onClick": undefined,
            "title": "Delete Entry",
            "type": "button",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <use
                xlinkHref="icons.svg#icon-trash-2"
              />,
              "className": "icon",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "xlinkHref": "icons.svg#icon-trash-2",
              },
              "ref": null,
              "rendered": null,
              "type": "use",
            },
            "type": "svg",
          },
          "type": "button",
        },
      ],
      "type": "footer",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`matches snapshot 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <_default
    currentIndex={1}
    entries={
      Array [
        Object {
          "body": "this body",
          "title": "this title",
        },
      ]
    }
    entryIsSelected={true}
    handleAdd={[MockFunction]}
    history={
      Object {
        "push": [MockFunction] {
          "calls": Array [
            Array [
              "/profile",
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        },
      }
    }
    showAdd={false}
    updateMode={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <button
          className="settings drop-container"
          onClick={[Function]}
          title="Settings"
          type="button"
        >
          <svg
            className="icon"
          >
            <use
              xlinkHref="icons.svg#icon-settings"
            />
          </svg>
        </button>,
        <button
          className="add "
          onClick={[MockFunction]}
          title="New entry"
          type="button"
        >
          <svg
            className="icon"
          >
            <use
              xlinkHref="icons.svg#icon-plus"
            />
          </svg>
        </button>,
        <button
          className="edit"
          title="Edit Entry"
          type="button"
        >
          <svg
            className="icon"
          >
            <use
              xlinkHref="icons.svg#icon-edit-3"
            />
          </svg>
        </button>,
        <button
          className="delete"
          title="Delete Entry"
          type="button"
        >
          <svg
            className="icon"
          >
            <use
              xlinkHref="icons.svg#icon-trash-2"
            />
          </svg>
        </button>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <svg
            className="icon"
          >
            <use
              xlinkHref="icons.svg#icon-settings"
            />
          </svg>,
          "className": "settings drop-container",
          "onClick": [Function],
          "title": "Settings",
          "type": "button",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <use
              xlinkHref="icons.svg#icon-settings"
            />,
            "className": "icon",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "xlinkHref": "icons.svg#icon-settings",
            },
            "ref": null,
            "rendered": null,
            "type": "use",
          },
          "type": "svg",
        },
        "type": "button",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <svg
            className="icon"
          >
            <use
              xlinkHref="icons.svg#icon-plus"
            />
          </svg>,
          "className": "add ",
          "onClick": [MockFunction],
          "title": "New entry",
          "type": "button",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <use
              xlinkHref="icons.svg#icon-plus"
            />,
            "className": "icon",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "xlinkHref": "icons.svg#icon-plus",
            },
            "ref": null,
            "rendered": null,
            "type": "use",
          },
          "type": "svg",
        },
        "type": "button",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <svg
            className="icon"
          >
            <use
              xlinkHref="icons.svg#icon-edit-3"
            />
          </svg>,
          "className": "edit",
          "onClick": undefined,
          "title": "Edit Entry",
          "type": "button",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <use
              xlinkHref="icons.svg#icon-edit-3"
            />,
            "className": "icon",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "xlinkHref": "icons.svg#icon-edit-3",
            },
            "ref": null,
            "rendered": null,
            "type": "use",
          },
          "type": "svg",
        },
        "type": "button",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <svg
            className="icon"
          >
            <use
              xlinkHref="icons.svg#icon-trash-2"
            />
          </svg>,
          "className": "delete",
          "onClick": undefined,
          "title": "Delete Entry",
          "type": "button",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <use
              xlinkHref="icons.svg#icon-trash-2"
            />,
            "className": "icon",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "xlinkHref": "icons.svg#icon-trash-2",
            },
            "ref": null,
            "rendered": null,
            "type": "use",
          },
          "type": "svg",
        },
        "type": "button",
      },
    ],
    "type": "footer",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <button
            className="settings drop-container"
            onClick={[Function]}
            title="Settings"
            type="button"
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="icons.svg#icon-settings"
              />
            </svg>
          </button>,
          <button
            className="add "
            onClick={[MockFunction]}
            title="New entry"
            type="button"
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="icons.svg#icon-plus"
              />
            </svg>
          </button>,
          <button
            className="edit"
            title="Edit Entry"
            type="button"
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="icons.svg#icon-edit-3"
              />
            </svg>
          </button>,
          <button
            className="delete"
            title="Delete Entry"
            type="button"
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="icons.svg#icon-trash-2"
              />
            </svg>
          </button>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <svg
              className="icon"
            >
              <use
                xlinkHref="icons.svg#icon-settings"
              />
            </svg>,
            "className": "settings drop-container",
            "onClick": [Function],
            "title": "Settings",
            "type": "button",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <use
                xlinkHref="icons.svg#icon-settings"
              />,
              "className": "icon",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "xlinkHref": "icons.svg#icon-settings",
              },
              "ref": null,
              "rendered": null,
              "type": "use",
            },
            "type": "svg",
          },
          "type": "button",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <svg
              className="icon"
            >
              <use
                xlinkHref="icons.svg#icon-plus"
              />
            </svg>,
            "className": "add ",
            "onClick": [MockFunction],
            "title": "New entry",
            "type": "button",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <use
                xlinkHref="icons.svg#icon-plus"
              />,
              "className": "icon",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "xlinkHref": "icons.svg#icon-plus",
              },
              "ref": null,
              "rendered": null,
              "type": "use",
            },
            "type": "svg",
          },
          "type": "button",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <svg
              className="icon"
            >
              <use
                xlinkHref="icons.svg#icon-edit-3"
              />
            </svg>,
            "className": "edit",
            "onClick": undefined,
            "title": "Edit Entry",
            "type": "button",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <use
                xlinkHref="icons.svg#icon-edit-3"
              />,
              "className": "icon",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "xlinkHref": "icons.svg#icon-edit-3",
              },
              "ref": null,
              "rendered": null,
              "type": "use",
            },
            "type": "svg",
          },
          "type": "button",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <svg
              className="icon"
            >
              <use
                xlinkHref="icons.svg#icon-trash-2"
              />
            </svg>,
            "className": "delete",
            "onClick": undefined,
            "title": "Delete Entry",
            "type": "button",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <use
                xlinkHref="icons.svg#icon-trash-2"
              />,
              "className": "icon",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "xlinkHref": "icons.svg#icon-trash-2",
              },
              "ref": null,
              "rendered": null,
              "type": "use",
            },
            "type": "svg",
          },
          "type": "button",
        },
      ],
      "type": "footer",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
